--- a/Strategy/index.html
+++ b/Strategy/index.html
@@ -297,12 +297,12 @@
               <div class="service-icon">
                 <i class="bi bi-palette"></i>
               </div>
-              <a href="service-details.html"
+              <a href="#"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a href="#">
                   <span>خدمات دائرة الخدمات المحاسبية والضريبية</span>
                 </a>
               </h3>
@@ -319,12 +319,12 @@
               <div class="service-icon">
                 <i class="bi bi-gem"></i>
               </div>
-              <a href="service-details.html"
+              <a href="#"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a href="#">
                   <span>خدمات دائرة ضبط الجودة وتطوير الأعمال</span>
                 </a>
               </h3>
@@ -344,12 +344,12 @@
               <div class="service-icon">
                 <i class="bi bi-megaphone"></i>
               </div>
-              <a href="service-details.html"
+              <a href="#"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a href="#">
                   <span>خدمات دائرة التكنولوجيا</span>
                 </a>
               </h3>
@@ -367,12 +367,12 @@
               <div class="service-icon">
                 <i class="bi bi-code-slash"></i>
               </div>
-              <a href="service-details.html"
+              <a href="#"
                 class="card-action d-flex align-items-center justify-content-center rounded-circle">
                 <i class="bi bi-arrow-up-right"></i>
               </a>
               <h3>
-                <a href="service-details.html">
+                <a href="#">
                   <span>خدمات دائرة ريادة الأعمال
                   </span>
                 </a>
